Security：move password and roles to investor, add API access control, hide password in API response