@@ -3,38 +3,46 @@ package io.github.lujian213.eggfund.dao;
 import io.github.lujian213.eggfund.model.Invest;
 import io.github.lujian213.eggfund.model.Investor;
 import io.github.lujian213.eggfund.utils.Constants;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
+
+import static io.github.lujian213.eggfund.utils.Constants.ADMIN;
 
 @Component
 public class FileSystemInvestDaoImpl extends FileSystemDaoImpl implements InvestDao {
-
-    FileUserDetailsManager fileUserDetailsManager;
 
     public FileSystemInvestDaoImpl(@Value("${repo.folder}") File repoFile) {
         super(repoFile);
     }
 
-    @Autowired
-    public void setFileUserDetailsManager(FileUserDetailsManager fileUserDetailsManager) {
-        this.fileUserDetailsManager = fileUserDetailsManager;
-    }
-
     @Override
     public List<Investor> loadInvestors() throws IOException {
+        List<Investor> ret;
         File investorsFile = new File(repoFile, Constants.INVESTORS_FILE_NAME);
         if (investorsFile.isFile()) {
-            return Constants.MAPPER.readerForListOf(Investor.class).readValue(investorsFile);
+            ret =  Constants.MAPPER.readerForListOf(Investor.class).readValue(investorsFile);
+        } else {
+            ret = new ArrayList<>();
         }
-        return Collections.emptyList();
+        complementIfMissing(ret);
+        return  ret;
+    }
+
+    private void complementIfMissing(List<Investor> investors) {
+        Optional<Investor> admin = investors.stream().filter(investor -> ADMIN.equals(investor.getId())).findFirst();
+        if (admin.isEmpty()) {
+            investors.add(new Investor(ADMIN, ADMIN, null, Constants.DEFAULT_AABB, List.of(ADMIN)));
+        }
+        investors.stream()
+                .filter(investor -> investor.getPassword() == null)
+                .forEach(investor -> {
+                    investor.setPassword(Constants.DEFAULT_AABB);
+                    investor.setRoles(List.of(Constants.DEFAULT_ROLE));
+                });
     }
 
     @Override
@@ -50,7 +58,6 @@ public class FileSystemInvestDaoImpl extends FileSystemDaoImpl implements Invest
     public void saveInvestors(Collection<Investor> investors) throws IOException {
         File investFile = new File(repoFile, Constants.INVESTORS_FILE_NAME);
         Constants.MAPPER.writeValue(investFile, investors);
-        fileUserDetailsManager.saveUsers(investors);
     }
 
     @Override
